--- a/portfolio2/index.html
+++ b/portfolio2/index.html
@@ -303,7 +303,7 @@
         </div>
        
     </div>
-    <a href="Pictures/Screenshots/rashcv.pdf"  download class="btn btn2">Download cv</a>
+    <a href="https://github.com/rashgithu/CV_Rashmita-Das/blob/main/rashcv.pdf"  download class="btn btn2">Download cv</a>
     </section>
     
     </main>
